--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy": "http://localhost:5000",
   "name": "backend",
   "version": "1.0.0",
   "main": "server.js",
@@ -11,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.19.2",
     "mongoose": "^8.7.0",
     "nodemon": "^3.1.7"
