--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "node server.js",
     "start": "node server.js",
-    "prod":"cd .. && cd frontend && cd client && npm run start && cd .. && cd .. && cd backend && npm run start"
+    "prod": "cd .. && cd frontend/client && npm run build && cd ../.. && cd backend && npm run start"
   },
   "author": "",
   "license": "ISC",
