--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^7.0.2",
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "db": "json-server --watch db.json --port 5000",
