--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.19.2",
+    "install": "^0.13.0",
     "mongoose": "^8.9.2",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "npm": "^11.0.0"
   },
   "keywords": []
 }
