prod deploy : http Url hidden

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=mongodb+srv://HealthTracker_admin:HealthTracker_admin@healthtracker.atzc9.mongodb.net/Health-db?retryWrites=true&w=majority&appName=HealthTracker
-DANGEROUSLY_DISABLE_HOST_CHECK=true
+REACT_APP_API_URL=https://healthtracker-6j0z.onrender.com
+
